# adventOfCode

./: .editorconfig  .gitignore
2018/day2/: day2.js
2018/day3/: day3.js
2019/: babel.config.js  day01.js  day01.mjs  day02.js  day02.mjs  day03.js  day03.mjs  day04.js  day04.mjs  day05.js  day06.js  day07.js  day08.js  day09.js  day10.js  jest.config.cjs  jest.config.js  package-lock.json  package.json
2019/common/: IntcodeComputer.js  IntcodeComputer.mjs  IntcodeComputer.test.js  inputReader.js  inputReader.mjs  permutator.js  permutator.test.js
2019/spec/: intcode.spec.mjs
2021/: day01.js  day02.js  day03.js  day04.js  day05.js  day06.js  day07.js  package-lock.json  package.json
2021/common/: httpInputReader.js
2022/: Cargo.toml
2022/src/: http_input_reader.rs  main.rs
day1/: day1.js
day2/: day2.js
day3/: day3.js
