[package]
name = "advent_of_code2022"
version = "0.1.0"
edition = "2021"

[lib]
name = "advent_of_code"
path = "src/http_input_reader.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["blocking"] }
