[package]
name = "advent_of_code2022"
version = "1.0.0"
edition = "2021"

[lib]
name = "input_reader"
path = "src/http_input_reader.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
reqwest = { version = "0.11.18", features = ["blocking"] }
